docs/lyx.css
/*
* Styles for lyx document.
*/
body {
	font: 90% sans-serif;
	background: #f9f9f9;
	color: black;
	margin: 0;
	padding: 0;
}

#globalWrapper {
	margin: 10px 80px 10px 80px;
	padding: 20px;
	background: #ffffff;
	line-height: 1.5em;
	overflow: hidden;
}
a {
	text-decoration: none;
	background: none;
}
a:link {
	color: #0030c0;
}
a:visited {
	color: #603090;
}
a:active {
	color: #ffa000;
}
a:hover {
	text-decoration: underline;
}
h1 {
	margin-top: 1em;
	line-height: 1.5em;
}
h1.Part {
	text-align: center;
}
h1.Part- {
	text-align: center;
}
sup {
	font-size: 0.75em;
	line-height: 0.5em;
	vertical-align: text-top;
}
sub {
	font-size: 0.75em;
	line-height: 0.5em;
	vertical-align: text-bottom;
}
div.Standard {
	margin: 1em 0;
}
div.Unindented {
	margin: 0;
}
div.Indented {
	text-indent: 30pt;
	margin: 0;
}
div.Indented * {
	text-indent: 0pt;
}
p.dir {
	float: right;
}
p.printindex {
	font-size: 0.90em;
}
a.printindex {
	color: black;
}
img.embedded {
	width: 100%;
	_width: auto;
}
div.float {
	margin-top: 1ex;
	margin-bottom: 1ex;
	text-align: center;
}
span.float {
	margin-top: 1ex;
	margin-bottom: 1ex;
	text-align: center;
}
div.figure {
	display: inline-block;
	padding: 1ex;
	margin-left: auto;
	margin-right: auto;
	border: thin solid #c0c0c0;
}
div.table {
	display: inline-block;
	padding: 1ex;
	margin-left: auto;
	margin-right: auto;
	border: thin solid #c0c0c0;
}
div.algorithm {
	display: inline-block;
	text-align: left;
	padding: 1ex;
	margin-left: auto;
	margin-right: auto;
	border: thin solid #c0c0c0;
}
div.caption {
	text-align: center;
	font-family: sans-serif;
	margin-left: auto;
	margin-right: auto;
	padding: 0.5ex;
}
img.figure {
	width: 100%;
	_width: auto;
}
div.multifigure {
	padding: 1ex;
	width: 100%;
}
div.multitable {
	display: inline-block;
	padding: 1ex;
	margin-left: auto;
	margin-right: auto;
	border: thin solid #c0c0c0;
}
div.multialgorithm {
	display: inline-block;
	padding: 1ex;
	margin-left: auto;
	margin-right: auto;
	border: thin solid #c0c0c0;
}
table {
	display: inline-table;
	text-align: center;
	border-collapse: collapse;
	margin-top: 1em;
	margin-bottom: 1em;
}
tr.header {
	border-bottom: thin solid #c0c0c0;
	background: #ffffff;
	font-weight: bold;
}
td {
	padding: 1ex;
	border: thin solid #f0f0f0;
}
td div.Standard {
	margin: 0ex;
	padding: 0ex;
}
div.caption div.Standard, div.table div.Standard {
	margin: 0ex;
	padding: 0ex;
}
td.numeric {
	text-align: right;
}
td.empty {
	text-align: center;
}
.right {
	text-align: right;
}
.center {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
}
p.biblio {
	font-size: 0.90em;
}
div.Paragraph, div.Paragraph- {
	font-weight: bold;
	font-size: 103%;
}
span.versalitas {
	font-variant: small-caps;
}
span.sans {
	font-family: sans-serif;
}
span.mathsf {
	font-family: sans-serif;
	font-style: normal;
}
span.red {
	color: #c00000;
}
span.blue {
	color: #0000c0;
}
span.green {
	color: #00c000;
}
span.magenta {
	color: #c000c0;
}
span.cyan {
	color: #00c0c0;
}
span.yellow {
	color: #c0c000;
}
span.white {
	color: #ffffff;
}
.formula {
	text-align: center;
	font-family: serif;
	margin: 1.2em 0;
}
div.formula {
	padding: 0.5ex;
	margin-left: auto;
	margin-right: auto;
}
span.overline {
	text-decoration: overline;
}
span.bar {
	text-decoration: overline;
}
.fraction {
	display: inline-block;
	vertical-align: middle;
	text-align: center;
}
.fraction .fraction {
	font-size: 80%;
	line-height: 100%;
}
.fullfraction {
	display: inline-block;
	vertical-align: middle;
	text-align: center;
}
span.numerator {
	display: block;
}
span.numerator-l {
	display: block;
	text-align: left;
}
span.numerator-r {
	display: block;
	text-align: right;
}
span.numeratorl {
	display: block;
	text-align: left;
}
span.numeratorr {
	display: block;
	text-align: right;
}
span.denominator {
	display: block;
	padding: 0;
	border-top: thin solid #000040;
}
span.sqrt {
	display: inline-block;
	vertical-align: middle;
}
span.radical {
	display: inline-block;
	padding: 0;
	font-size: 150%;
	vertical-align: top;
}
span.root {
	display: inline-block;
	border-top: thin #000040 solid;
	padding: 0;
	vertical-align: middle;
}
span.symbol {
	font-size: 125%;
}
span.bigsymbol {
	font-size: 150%;
}
span.largesymbol {
	font-size: 175%;
}
span.hugesymbol {
	font-size: 200%;
}
span.limits {
	display: inline-table;
	vertical-align: middle;
}
sub.bigsymbol {
	display: table-row;
	text-align: left;
	line-height: 150%;
}
sup.bigsymbol {
	display: table-row;
	text-align: left;
	line-height: 150%;
}
span.symbolover {
	display: inline-block;
	text-align: center;
	position: relative;
	float: right;
	right: 100%;
	bottom: 0.5em;
	width: 0px;
}
span.withsymbol {
	display: inline-block;
}
span.symbolunder {
	display: inline-block;
	text-align: center;
	position: relative;
	float: right;
	right: 80%;
	top: 0.3em;
	width: 0px;
}
span.dotted {
	border-top: thin #000040 dotted;
}
span.FootMarker {
	color: #004000;
}
span.Foot {
	float: right;
	clear: right;
	margin: 0.2ex;
	border: thin solid #c0c0c0;
	background: #ffffff;
	width: 30%;
	padding: 0.5ex;
	font: small normal;
	text-align: left;
}
span.Marginal {
	float: right;
	clear: right;
	margin: 0.2ex;
	border: thin solid #c0c0c0;
	background: #ffffff;
	width: 30%;
	padding: 0.5ex;
	font: small normal;
	text-align: left;
}
span.Note {
	display: none;
}
span.code {
	font-family: monospace;
}
div.Plain {
	display: inline;
	width: auto;
}
h1.title {
	text-align: center;
}
h2 {
	line-height: 1.4em;
}
h2.author {
	text-align: center;
}
h2.Date {
	text-align: center;
}
span.text {
	font-style: normal;
}
span.textipa {
	color: #008080;
}
span.Description-entry {
	font-weight: bold;
}
span.List-entry {
	display: inline-block;
	width: 25%;
	vertical-align: text-top;
}
span.List-contents {
	display: inline-block;
	width: 75%;
	vertical-align: text-top;
}
div.Space {
	display: none;
}
span.fraktur {
	font-family: "Lucida Blackletter", eufm10, blackletter;
}
span.blackboard {
	font-family: Blackboard, msbm10, serif;
}
span.script {
	font-family: "Monotype Corsiva", "Apple Chancery", "URW Chancery L", cursive;
}
span.arraydef {
	display: none;
}
span.appendix {
	display: none;
}
h1.biblio {
	font-size: 140%;
}
table.formula {
	display: inline-block;
	text-align: center;
	border-collapse: collapse;
	margin: 0em;
	vertical-align: middle;
}
td.formula-l {
	text-align: left;
	padding: 0.2ex;
	border: 0ex;
}
td.formula-c {
	text-align: center;
	padding: 0.2ex;
	border: 0ex;
}
td.formula-r {
	text-align: right;
	padding: 0.2ex;
	border: 0ex;
}
table.cases {
	display: inline-block;
	text-align: center;
	border-collapse: collapse;
	margin: 0.2em;
	border-left: thin solid #000040;
	vertical-align: middle;
}
table.cases tr td {
	padding-left: 1ex;
	padding-right: 1em;
}
table.environment {
	display: inline-block;
	text-align: right;
	margin: 0;
	vertical-align: middle;
}
table.environment tr td {
	padding: 0 1em;
}
span.greyedout {
	color: #808080;
}
div.Description, div.List, li {
	margin: 1em 0;
}
li.nested {
	list-style-type: none;
}
span.Info {
	background: #f0f0f0;
	border: thin solid #c0c0c0;
}
pre {
	padding: 0em;
	margin: 0em;
	width: auto;
	font-family: monospace;
	line-height: 1.5em;
}
pre.LyX-Code {
	margin: 0.5em 3em;
}
a.Label {
	text-decoration: none;
	color: #000000;
}
div.wrap-l, div.wrap-o, div.wrap-i {
	margin: 2ex;
	float: left;
}
div.wrap-r {
	margin: 2ex;
	float: right;
}
div.abstract {
	margin: 3em;
	text-align: center;
}
p.abstract-message {
	font-weight: bold;
}
div.listing {
	display: inline-block;
	text-align: left;
	margin-left: auto;
	margin-right: auto;
	padding: 0.5ex;
	border: thin solid #c0c0c0;
}
div.framed {
	outline-style: solid;
}
div.frameless {
}
div.Framed {
	outline-style: double;
}
div.Frameless {
	outline-style: outset;
}
div.Doublebox {
	outline-style: double;
}
div.Shadowbox {
	outline-style: outset;
}
div.Shaded {
	outline-style: inset;
}
div.ovalbox {
	outline-style: groove;
}
div.Ovalbox {
	outline-style: ridge;
}
span.number-left {
	float: left;
	background: #f0f0f0;
	width: 3em;
	text-align: right;
	margin-right: 1em;
}
span.number-right {
	float: right;
	background: #f0f0f0;
	width: 3em;
	text-align: right;
	margin-left: 1em;
}
a.eqnumber {
	display: inline-block;
	float: right;
	clear: right;
	font-weight: bold;
}
span.unknown {
	color: #800000;
}
span.phantom {
	color: #ffffff;
}
div.tocheader {
	margin: 1em 0;
	font-size: large;
}
a.toc {
	color: black;
}
a.biblioentry {
	color: black;
}
div.tocindent {
	padding: 0 0 0 2em;
}
div.toc {
	margin: 0.5em 0;
	font-size: 0.95em;
}
div.fulltoc {
	padding: 1em;
}
span.hspace {
	display: inline-block;
}
span.vspace {
	display: inline-block;
}
span.hfill {
	display: inline-block;
	margin-left: auto;
	margin-right: auto;
	min-width: 20mm;
	background: #fff0f0;
}
span.binom {
	display: inline-block;
	vertical-align: middle;
	text-align: center;
	font-size: 80%;
}
span.fullbinom {
	display: inline-block;
	vertical-align: middle;
	text-align: center;
}
span.upbinom {
	display: block;
	padding: 0em;
}
span.downbinom {
	display: block;
	padding: 0em;
}
div.defskip {
	display: block;
	height: 1em;
}
div.smallskip {
	display: block;
	height: 0.5em;
}
div.medskip {
	display: block;
	height: 1em;
}
div.bigskip {
	display: block;
	height: 2em;
}
div.vfill {
	display: block;
	height: 30em;
}
span.menuitem {
	font-size: 105%;
}
div.chunk {
	width: auto;
}
span.chunkleft {
	font-style: normal;
}
span.chunkright {
	font-style: normal;
}
span.chunkdecl {
	font-style: italic;
	padding: 0em 2em;
}
span.chunkref {
	font-style: italic;
}
span.normal {
	font-style: normal;
}
span.overbrace {
	border-top: 2pt solid #000000;
}
span.underbrace {
	border-bottom: 2pt solid #000000;
}
div.warning {
	font-size: 120%;
	color:#cc0000;
}
div.PlainVisible {
	width: auto;
}
div.splitheader {
	margin: 0em;
	text-align: center;
	background: #f9f9f9;
}
span.next {
	float: right;
	width: 15em;
	text-align: right;
}
span.up {
	display: inline-block;
	text-align: center;
}
span.prev {
	float: left;
	width: 15em;
	text-align: left;
}
hr.footer {
	margin-top: 2em;
}
div.footer {
	font-size: 0.90em;
	margin: 1em 0;
}
div.Institute {
	text-align: center;
}
div.indexgroup {
	margin-left: 2em;
}

